# byteforge-scaffold

./: .gitignore  DEPLOYMENT_MANUAL.md  FUTURE_ROADMAP.md  LICENSE  LOCAL_SETUP.md  README.md  RENDER_ENV_VARS.md  byteforge  byteforge.bat  byteforge.py  docker-compose.yml  install_system.bat  render.yaml  run_system.bat  start.ps1
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: audit.py  auth.py  config.py  db.py  deps.py  main.py  models.py  rbac.py  schemas.py  security.py  tasks.py  worker.py
backend/app/routers/: ai.py  auth.py  evidence.py  findings.py  jobs.py  targets.py
backend/app/services/: active_scan.py  crawl.py  integrations.py  ml.py  nuclei_runner.py  pdf_generator.py  recon.py  reporting.py  scheduler.py  specialized_scanners.py  storage.py
backend/tests/: test_main.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CommandPalette.tsx  Layout.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AIAssistant.tsx  Dashboard.tsx  Evidence.tsx  Findings.tsx  Jobs.tsx  Login.tsx  NetworkMap.tsx  Reports.tsx  Settings.tsx  Targets.tsx
k8s/: Chart.yaml
k8s/templates/: deployment.yaml
